--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Flyingtomatoairlines.GitHub.io by harsh2art</title>
+    <title>Flyingtomatoairlines</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Flyingtomatoairlines.GitHub.io</h1>
+        <h1>Flyingtomatoairlines</h1>
         <p>Flying Tomato (CS3382), is a project developed in CityU Hong Kong CS3382.</p>
 
         <p class="view"><a href="https://github.com/harsh2art/flyingtomatoairlines.github.io">View the Project on GitHub <small>harsh2art/flyingtomatoairlines.github.io</small></a></p>
