--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="airline,travel,book,explore,flying tomato,
+    tomato air,tomatoairline,flyingtomato,check in,flight status,discover">
+    <meta name="description" content="Explore and book your ideal trip with Flying Tomato Airlines.">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Flying Tomato Airlines</title>
 
@@ -36,14 +39,18 @@
           <a id="sideBarLink" href="#">Sidebar</a>
         </div>
 
-        <div id="sidebar"></div>
+        <div id="toolbar"></div>
+
+        <footer>
+          <p>This is not a real website. This was designed as part of a school project on web design and usability.</p>
+        </footer>
 
       </div>
 
       <div id="nav"></div>
     </div>
 
-    <script>
+    <!-- <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiZWxhbmR0bWFuIiwiYSI6IlppRlZSUGMifQ.X0oouInkmaBJ4gRoUpXD3A';
     var map = new mapboxgl.Map({
         container: 'map',
@@ -51,7 +58,7 @@
         center: [114.10, 22.39],
         zoom: 3.9
     });
-    </script>
+    </script> -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
