--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div id="nav"></div>
     </div>
 
-    <!-- <script>
+    <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiZWxhbmR0bWFuIiwiYSI6IlppRlZSUGMifQ.X0oouInkmaBJ4gRoUpXD3A';
     var map = new mapboxgl.Map({
         container: 'map',
@@ -58,7 +58,7 @@
         center: [114.10, 22.39],
         zoom: 3.9
     });
-    </script> -->
+    </script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
