--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="airline,travel,book,explore,flying tomato,
-    tomato air,tomatoairline,flyingtomato,check in,flight status,discover">
+    <meta name="keywords" content="flying tomato,tomato air,tomatoairline,flyingtomato,check in,flight status,discover,
+                                   CityU,Hong Kong,CS3382, airline,travel,book,explore,">
     <meta name="description" content="Explore and book your ideal trip with Flying Tomato Airlines.">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Flying Tomato Airlines</title>
