--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
           <a id="sideBarLink" href="#">Sidebar</a>
         </div>
 
-        <div id="toolbar"></div>
+        <div id="toolbar">
+
+          <h1>CS3382 Web Usability Design and Engineering</h1>
+
+        </div>
 
         <footer>
           <p>This is not a real website. This was designed as part of a school project on web design and usability.</p>
