Updated header and nav

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
 
         <div id="map"></div>
 
-        <div id="controls">
+        <!-- <div id="controls">
           <a id="navLink" href="#">Nav</a>
           <a id="sideBarLink" href="#">Sidebar</a>
-        </div>
+        </div> -->
 
         <div id="toolbar">
+
+          <a id="navLink" href="#">Nav</a>
 
           <h1>CS3382 Web Usability Design and Engineering</h1>
 
