--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="flying tomato,tomato air,tomatoairline,flyingtomato,check in,flight status,discover,
                                    CityU,Hong Kong,CS3382, airline,travel,book,explore,">
     <meta name="description" content="Explore and book your ideal trip with Flying Tomato Airlines.">
+    <meta name="p:domain_verify" content="f5c282ee5d68b8b6184c680e6a163a7c"/>
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Flying Tomato Airlines</title>
 
