--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@
 
         <div id="toolbar">
 
+          <nav class="navbar navbar-default">
+            <div class="container-fluid">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+              </div>
+
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                  <li><a href="#">Link</a></li>
+                  <li><a href="#">Link</a></li>
+                </ul>
+              </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+          </nav>
+
           <div id="tab-container">
 
             <!-- Nav tabs -->
@@ -83,15 +105,15 @@
 
         </div>
 
-        <button id="navLink">Nav</button>
+        <!-- <button id="navLink">Nav</button> -->
 
         <footer>
-          <p>This is not a real website. This was designed as part of a school project on web design and usability.</p>
+          <span>This is not a real website. This was designed as part of a school project on web design and usability.</span>
         </footer>
 
       </div>
 
-      <div id="nav"></div>
+      <!-- <div id="nav"></div> -->
     </div>
 
     <!-- <script>
