--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                       <h1>Temp Grid Heading</h1>
                   </div>
               </div>
-              <div id="map"></div>
+              <div id="map" class="col-lg-12"></div>
               <footer>
                 <p>This is not a real website. This was designed as part of a school project on web design and usability.</p>
               </footer>
