--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Flying Tomato Airlines</title>
 
-    <!-- Mapbbox -->
-    <script src='https://api.mapbox.com/mapbox-gl-js/v0.25.1/mapbox-gl.js'></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v0.25.1/mapbox-gl.css' rel='stylesheet' />
-
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-datepicker.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.3.2/css/bootstrap-slider.css" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCTK4ZA4qWJcWdWHCRFEMrvuxpp-JzRYhI"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -43,93 +43,122 @@
 
         <div id="toolbar">
 
-          <nav class="navbar navbar-default">
-            <div class="container-fluid">
-              <!-- Brand and toggle get grouped for better mobile display -->
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-              </div>
-
-              <!-- Collect the nav links, forms, and other content for toggling -->
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                  <li><a href="#">Link</a></li>
-                  <li><a href="#">Link</a></li>
-                </ul>
-              </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-          </nav>
-
           <div id="tab-container">
 
             <!-- Nav tabs -->
             <ul class="nav nav-tabs device-small" role="tablist">
-              <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Destination</a></li>
-              <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">From</a></li>
-              <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Dates</a></li>
-              <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Budget</a></li>
+              <li role="presentation" class="destination active">
+                <a href="#destination" aria-controls="home" role="tab" data-toggle="tab"><span id="destinationTab">NRT</span><br /><span class="tab-font-small">Destination</span></a>
+              </li>
+              <li role="presentation" class="from">
+                <a href="#from" aria-controls="profile" role="tab" data-toggle="tab"><span id="fromTab">HKG</span><br /><span class="tab-font-small">From</span></a>
+              </li>
+              <li role="presentation" class="dates">
+                <a href="#dates" aria-controls="messages" role="tab" data-toggle="tab"><span id="datesTab">10-17.11</span><br /><span class="tab-font-small datesTab">Dates</span></a>
+              </li>
+              <li role="presentation" class="budget">
+                <a href="#budget" aria-controls="settings" role="tab" data-toggle="tab">$<span id="budgetvalue">1000</span><br /><span class="tab-font-small">Budget</span></a>
+              </li>
             </ul>
 
             <!-- Tab panes -->
             <div class="tab-content">
 
-              <div role="tabpanel" class="tab-pane active" id="home">
-                <h2>Destination</h2>
+              <!-- Destination -->
+              <div role="tabpanel" class="tab-pane active" id="destination">
                 <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Search for destination...">
+                  <input type="text" id="typeahead-destination" class="form-control" data-provide="typeahead" placeholder="Search for destination...">
                   <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Go!</button>
+                    <button class="btn btn-default" type="button">Next</button>
                   </span>
                 </div><!-- /input-group -->
+                <div class="tab-link-container">
+                  <a href="#">Not sure? Explore our favourites</a>
+                </div>
               </div><!-- /destination -->
 
-              <div role="tabpanel" class="tab-pane" id="profile">
-                <h2>From</h2>
+              <!-- From -->
+              <div role="tabpanel" class="tab-pane" id="from">
                 <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Search for departure airport...">
+                  <input type="text" id="typeahead-from" class="form-control" data-provide="typeahead" placeholder="Search for departure airport...">
                   <span class="input-group-btn">
                     <button class="btn btn-default" type="button">Go!</button>
                   </span>
                 </div><!-- /input-group -->
-              </div>
-              <div role="tabpanel" class="tab-pane" id="messages"><h2>Dates</h2></div>
-              <div role="tabpanel" class="tab-pane" id="settings"><h2>Budget</h2></div>
+                <div class="tab-link-container">
+                  <a href="#" onClick="getLocation()">Get your current location
+                    <div id="spinner" class="spinner none">
+                      <div class="bounce1"></div>
+                      <div class="bounce2"></div>
+                      <div class="bounce3"></div>
+                    </div>
+                  </a>
+                </div>
+              </div><!-- /from -->
+
+              <!-- Dates -->
+              <div role="tabpanel" class="tab-pane" id="dates">
+                <div class="input-daterange input-group" id="datepicker">
+                    <input type="text" class="form-control dateStart" name="start" placeholder="From" />
+                    <span class="input-group-addon">to</span>
+                    <input type="text" class="form-control dateEnd" name="end" placeholder="To" />
+                </div>
+                <div class="tab-link-container" id="dateRadioButtons">
+                  <label class="radio-inline"><input value="return" checked="checked" type="radio" name="optradio">Return</label>
+                  <label class="radio-inline"><input value="oneway" type="radio" name="optradio">One-way</label>
+                  <a href="#">Not sure about dates</a>
+                </div>
+              </div><!-- /dates -->
+
+              <!-- Budget -->
+              <div role="tabpanel" class="tab-pane" id="budget">
+                <div class="slider-header">
+                  <span class="low-value">$0</span>
+                  <span class="high-value">$2000</span>
+                </div>
+                <div class="slider-container">
+                  <input id="budget-slider" data-slider-id='budget-slider-id' data-slider-tooltip="hide" type="text" data-slider-min="0" data-slider-max="2000" data-slider-step="10" data-slider-value="1000"/>
+                </div>
+              </div><!-- /budget -->
             </div>
 
           </div>
 
-        </div>
+        </div><!-- /Toolbar -->
 
         <!-- <button id="navLink">Nav</button> -->
 
-        <footer>
+        <!-- <footer>
           <span>This is not a real website. This was designed as part of a school project on web design and usability.</span>
-        </footer>
+        </footer> -->
+
+        <div id="flight-results">
+
+          <p></p>
+
+        </div>
+
+        <div id="book">
+
+          <h1><span id="booking-from">From</span> to <span id="booking-destination">Destination</span></h1>
+
+          <h1><span id="booking-dateStart">DateEnd</span> to <span id="booking-dateEnd">DateStart</span></h1>
+
+        </div>
 
       </div>
 
       <!-- <div id="nav"></div> -->
     </div>
 
-    <!-- <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoiZWxhbmR0bWFuIiwiYSI6IlppRlZSUGMifQ.X0oouInkmaBJ4gRoUpXD3A';
-    var map = new mapboxgl.Map({
-        container: 'map',
-        style: 'mapbox://styles/elandtman/ciu3xebg800bc2in57vwtoj63',
-        center: [114.10, 22.39],
-        zoom: 3.9
-    });
-    </script> -->
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-datepicker.min.js"></script>
+    <script src="js/bootstrap3-typeahead.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.3.2/bootstrap-slider.min.js"></script>
+    <script src="js/flights.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
