--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCTK4ZA4qWJcWdWHCRFEMrvuxpp-JzRYhI"></script>
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -39,56 +37,41 @@
 
         <!-- Nav tabs -->
         <ul class="nav nav-tabs device-small" role="tablist">
-          <li role="presentation" class="destination active">
-            <a href="#destination" aria-controls="home" role="tab" data-toggle="tab"><span id="destinationTab">NRT</span><br /><span class="tab-font-small">Destination</span></a>
-          </li>
-          <li role="presentation" class="from">
+          <li role="presentation" class="from active">
             <a href="#from" aria-controls="profile" role="tab" data-toggle="tab"><span id="fromTab">HKG</span><br /><span class="tab-font-small">From</span></a>
+          </li>
+          <li role="presentation" class="destination">
+            <a href="#destination" aria-controls="home" role="tab" data-toggle="tab"><span id="destinationTab">NRT</span><br /><span class="tab-font-small">Destination</span></a>
           </li>
           <li role="presentation" class="dates">
             <a href="#dates" aria-controls="messages" role="tab" data-toggle="tab"><span id="datesTab">10-17.11</span><br /><span class="tab-font-small datesTab">Dates</span></a>
           </li>
           <li role="presentation" class="budget">
-            <a href="#budget" aria-controls="settings" role="tab" data-toggle="tab">$<span id="budgetvalue">1000</span><br /><span class="tab-font-small">Budget</span></a>
+            <a href="#budget" aria-controls="settings" role="tab" data-toggle="tab">$<span class="budgetvalue" id="budgetvalue">1000</span><br /><span class="tab-font-small">Budget</span></a>
           </li>
         </ul>
 
         <div class="tab-content">
 
-          <!-- Destination -->
-          <div role="tabpanel" class="tab-pane active" id="destination">
-            <div class="input-group">
-              <input type="text" id="typeahead-destination" class="form-control" data-provide="typeahead" placeholder="Search for destination...">
-              <span class="input-group-btn">
-                <button class="btn btn-default" type="button">Next</button>
-              </span>
-            </div><!-- /input-group -->
-            <div class="tab-link-container">
-              <a href="#">Not sure? Explore our favourites</a>
-            </div>
-          </div><!-- /destination -->
-
           <!-- From -->
           <div role="tabpanel" class="tab-pane" id="from">
+            <label>From</label>
             <div class="input-group">
-              <input type="text" id="typeahead-from" class="form-control" data-provide="typeahead" placeholder="Search for departure airport...">
-              <span class="input-group-btn">
-                <button class="btn btn-default" type="button">Go!</button>
-              </span>
+              <input type="text" id="typeahead-from" class="form-control from" data-provide="typeahead" value="Hong Kong (HKG)" placeholder="Hong Kong HKG">
             </div><!-- /input-group -->
-            <div class="tab-link-container">
-              <a href="#" onClick="getLocation()">Get your current location
-                <div id="spinner" class="spinner none">
-                  <div class="bounce1"></div>
-                  <div class="bounce2"></div>
-                  <div class="bounce3"></div>
-                </div>
-              </a>
-            </div>
           </div><!-- /from -->
+
+          <!-- Destination -->
+          <div role="tabpanel" class="tab-pane active" id="destination">
+            <label>To</label>
+            <div class="input-group">
+              <input type="text" id="typeahead-destination" class="form-control destination" data-provide="typeahead" placeholder="Search for destination...">
+            </div><!-- /input-group -->
+          </div><!-- /destination -->
 
           <!-- Dates -->
           <div role="tabpanel" class="tab-pane" id="dates">
+            <label>Dates</label>
             <div class="input-daterange input-group" id="datepicker">
                 <input type="text" class="form-control dateStart" name="start" placeholder="From" />
                 <span class="input-group-addon">to</span>
@@ -102,12 +85,11 @@
 
           <!-- Budget -->
           <div role="tabpanel" class="tab-pane" id="budget">
-            <div class="slider-header">
-              <span class="low-value">$0</span>
-              <span class="high-value">$2000</span>
-            </div>
-            <div class="slider-container">
-              <input id="budget-slider" data-slider-id='budget-slider-id' data-slider-tooltip="hide" type="text" data-slider-min="0" data-slider-max="2000" data-slider-step="10" data-slider-value="1000"/>
+            <div class="inner">
+              <label>$<span class="budgetvalue">2000+</span></label>
+              <div class="slider-container">
+                <input id="budget-slider" data-slider-id='budget-slider-id' data-slider-tooltip="hide" type="text" data-slider-min="0" data-slider-max="2000" data-slider-step="10" data-slider-value="2000"/>
+              </div>
             </div>
           </div><!-- /budget -->
 
@@ -127,7 +109,29 @@
 
           <div id="info-layer">
 
-            <div id="info-content"></div>
+            <div id="info-content">
+
+              <a href="#" class="flightItem">
+
+                <h2><span class="bold">07:15</span> HKG <i class="fa fa-long-arrow-right" aria-hidden="true"></i> <span class="bold">11:35</span> SIN</h2>
+
+                <p class="info">0 Stops - 4h 20min</p>
+
+                <p class="price">HKD <span class="bold">$1050</span></p>
+
+              </a>
+
+            </div>
+
+            <div id="infoButton">
+
+              <div class="inner">
+
+                <button>Book flights</button>
+
+              </div>
+
+            </div>
 
           </div>
 
@@ -146,7 +150,7 @@
     <script src="js/bootstrap-datepicker.min.js"></script>
     <script src="js/bootstrap3-typeahead.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.3.2/bootstrap-slider.min.js"></script>
-    <script src="js/fligths.js"></script>
+    <script src="js/flights.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
