--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="tab-content">
 
           <!-- From -->
-          <div role="tabpanel" class="tab-pane" id="from">
+          <div role="tabpanel" class="tab-pane active" id="from">
             <label>From</label>
             <div class="input-group">
               <input type="text" id="typeahead-from" class="form-control from" data-provide="typeahead" value="Hong Kong (HKG)" placeholder="Hong Kong HKG">
@@ -62,7 +62,7 @@
           </div><!-- /from -->
 
           <!-- Destination -->
-          <div role="tabpanel" class="tab-pane active" id="destination">
+          <div role="tabpanel" class="tab-pane" id="destination">
             <label>To</label>
             <div class="input-group">
               <input type="text" id="typeahead-destination" class="form-control destination" data-provide="typeahead" placeholder="Search for destination...">
@@ -71,15 +71,16 @@
 
           <!-- Dates -->
           <div role="tabpanel" class="tab-pane" id="dates">
-            <label>Dates</label>
+            <label>
+              <div class="tab-link-container" id="dateRadioButtons">
+                <label class="radio-inline"><input value="return" checked="checked" type="radio" name="optradio">Return</label>
+                <label class="radio-inline"><input value="oneway" type="radio" name="optradio">One-way</label>
+              </div>
+            </label>
             <div class="input-daterange input-group" id="datepicker">
                 <input type="text" class="form-control dateStart" name="start" placeholder="From" />
                 <span class="input-group-addon">to</span>
                 <input type="text" class="form-control dateEnd" name="end" placeholder="To" />
-            </div>
-            <div class="tab-link-container" id="dateRadioButtons">
-              <label class="radio-inline"><input value="return" checked="checked" type="radio" name="optradio">Return</label>
-              <label class="radio-inline"><input value="oneway" type="radio" name="optradio">One-way</label>
             </div>
           </div><!-- /dates -->
 
@@ -111,13 +112,17 @@
 
             <div id="info-content">
 
-              <a href="#" class="flightItem">
+              <h1>Explore our best deals</h1>
 
-                <h2><span class="bold">07:15</span> HKG <i class="fa fa-long-arrow-right" aria-hidden="true"></i> <span class="bold">11:35</span> SIN</h2>
+              <a href="#" class="flightItem explore beaches">
 
-                <p class="info">0 Stops - 4h 20min</p>
+                <h2>Relaxing beaches</h2>
 
-                <p class="price">HKD <span class="bold">$1050</span></p>
+              </a>
+
+              <a href="#" class="flightItem explore cities">
+
+                <h2>City breaks</h2>
 
               </a>
 
@@ -126,6 +131,8 @@
             <div id="infoButton">
 
               <div class="inner">
+
+                <p>Total: $<span class="bookingTotal"></span></p>
 
                 <button>Book flights</button>
 
