--- a/index.html
+++ b/index.html
@@ -31,7 +31,21 @@
 
     <header>
 
-      <div id="topBar"></div>
+      <div id="topBar">
+
+        <div id="logo"><a href="index.html"><img src="img/logo.png" alt="logo"></a></div>
+
+        <div class="inner">
+
+          <ul>
+            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Help</a></li>
+            <li><a href="#"><i class="fa fa-usd" aria-hidden="true"></i> HKD</a></li>
+            <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i> Manage Booking</a></li>
+          </ul>
+
+        </div>
+
+      </div>
 
         <div id="tabs">
 
@@ -174,7 +188,13 @@
 
           <div id="bookingProgress">
 
-            <p>Passenger details <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Payment Information<i class="fa fa-long-arrow-right" aria-hidden="true"></i> Booking Confirmation</p>
+            <p>
+              <span id="stageDetails" class="active">Passenger details </span>
+              <i class="fa fa-caret-right" aria-hidden="true"></i>
+              <span id="stagePayment"> Payment Information </span>
+              <i class="fa fa-caret-right" aria-hidden="true"></i>
+              <span id="stageConfirm"> Booking Confirmation</span>
+            </p>
 
           </div>
 
@@ -288,13 +308,57 @@
               </div>
             </div>
 
-            <a href="index.html">Back to start</a>
+            <a class="btn btn-primary btn-lg" href="index.html" role="button">Back to start</a>
 
           </div>
 
         </div>
 
-        <footer></footer>
+        <footer>
+
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="col-md-4">
+                  <ul class="list-unstyled">
+                    <li>Flying Tomato Airlines<li>
+                  </ul>
+                  <p>This is not a real website. This was designed as part of a school project on web design and usability.</p>
+                </div>
+                <div class="col-md-4">
+                  <ul class="list-unstyled">
+                    <li>Shortcuts<li>
+                    <li><a href="#">Manage Booking</a></li>
+                    <li><a href="#">Check In</a></li>
+                    <li><a href="#">Flight Updates</a></li>
+                    <li><a href="#">Frequent Flyer Programme</a></li>
+                  </ul>
+                </div>
+                <div class="col-md-4 social">
+                  <ul class="list-unstyled">
+                    <li>Social Media<li>
+                  </ul>
+                  <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                  <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                  <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="row copy">
+              <div class="col-lg-12">
+                <div class="col-md-8">
+                  <a href="#">Terms of Service</a>
+                  <a href="#">Privacy</a>
+                  <a href="#">Security</a>
+                </div>
+                <div class="col-md-4">
+                  <p class="muted pull-right">© 2016 Flying Tomato Airlines. All rights reserved</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </footer>
 
       </div>
 
