--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
           <div id="bookingProgress">
 
             <p>
-              <span id="stageDetails" class="active">Passenger details </span>
+              <span id="stageDetails" class="active">1.Passenger details</span>
               <i class="fa fa-caret-right" aria-hidden="true"></i>
-              <span id="stagePayment"> Payment Information </span>
+              <span id="stagePayment">2.Payment</span>
               <i class="fa fa-caret-right" aria-hidden="true"></i>
-              <span id="stageConfirm"> Booking Confirmation</span>
+              <span id="stageConfirm">3.Confirmation</span>
             </p>
 
           </div>
@@ -320,14 +320,10 @@
             <div class="row">
               <div class="col-lg-12">
                 <div class="col-md-4">
-                  <ul class="list-unstyled">
-                    <li>Flying Tomato Airlines<li>
-                  </ul>
                   <p>This is not a real website. This was designed as part of a school project on web design and usability.</p>
                 </div>
                 <div class="col-md-4">
                   <ul class="list-unstyled">
-                    <li>Shortcuts<li>
                     <li><a href="#">Manage Booking</a></li>
                     <li><a href="#">Check In</a></li>
                     <li><a href="#">Flight Updates</a></li>
@@ -335,9 +331,6 @@
                   </ul>
                 </div>
                 <div class="col-md-4 social">
-                  <ul class="list-unstyled">
-                    <li>Social Media<li>
-                  </ul>
                   <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                   <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                   <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
