--- a/index.html
+++ b/index.html
@@ -134,37 +134,41 @@
 
         <div id="map-area">
 
-          <div id="map" class="explore"></div>
+          <div id="map" class="explore home"></div>
 
           <div id="info-layer">
 
-            <div id="info-content">
+            <div class="inner">
 
-              <h1>Explore our best deals</h1>
+              <div id="info-content">
 
-              <a href="#" class="flightItem explore beaches">
+                <h1>Explore our best deals</h1>
 
-                <h2>Relaxing beaches</h2>
+                <a href="#" class="flightItem explore beaches">
 
-              </a>
+                  <h2>Relaxing beaches</h2>
 
-              <a href="#" class="flightItem explore cities">
+                </a>
 
-                <h2>City breaks</h2>
+                <a href="#" class="flightItem explore cities">
 
-              </a>
+                  <h2>City breaks</h2>
 
-              <a href="#" class="flightItem explore outdoors">
+                </a>
 
-                <h2>Breathtaking outdoors</h2>
+                <a href="#" class="flightItem explore outdoors">
 
-              </a>
+                  <h2>Breathtaking outdoors</h2>
 
-              <a href="#" class="flightItem explore adventure">
+                </a>
 
-                <h2>Adventure</h2>
+                <a href="#" class="flightItem explore adventure">
 
-              </a>
+                  <h2>Adventure</h2>
+
+                </a>
+
+              </div>
 
             </div>
 
