--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <div class="inner">
 
           <ul>
-            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Help</a></li>
-            <li><a href="#"><i class="fa fa-usd" aria-hidden="true"></i> HKD</a></li>
-            <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i> Manage Booking</a></li>
+            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i><span> Help</span></a></li>
+            <li><a href="#"><i class="fa fa-usd" aria-hidden="true"></i><span> HKD</span></a></li>
+            <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i><span> Manage Booking</span></a></li>
           </ul>
 
         </div>
@@ -55,7 +55,7 @@
             <a href="#from" aria-controls="profile" role="tab" data-toggle="tab"><span id="fromTab">HKG</span><br /><span class="tab-font-small">From</span></a>
           </li>
           <li role="presentation" class="destination">
-            <a href="#destination" aria-controls="home" role="tab" data-toggle="tab"><span id="destinationTab">NRT</span><br /><span class="tab-font-small">Destination</span></a>
+            <a href="#destination" aria-controls="home" role="tab" data-toggle="tab"><span id="destinationTab">-</span><br /><span class="tab-font-small">Destination</span></a>
           </li>
           <li role="presentation" class="dates">
             <a href="#dates" aria-controls="messages" role="tab" data-toggle="tab"><span id="datesTab">10-17.11</span><br /><span class="tab-font-small datesTab">Dates</span></a>
