--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="keywords" content="flying tomato,tomato air,tomatoairline,flyingtomato,check in,flight status,discover,
                                    CityU,Hong Kong,CS3382, airline,travel,book,explore,">
     <meta name="description" content="Explore and book your ideal trip with Flying Tomato Airlines.">
