--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a href="#dates" aria-controls="messages" role="tab" data-toggle="tab"><span id="datesTab">10-17.11</span><br /><span class="tab-font-small datesTab">Dates</span></a>
           </li>
           <li role="presentation" class="budget">
-            <a href="#budget" aria-controls="settings" role="tab" data-toggle="tab">$<span class="budgetvalue" id="budgetvalue">1000</span><br /><span class="tab-font-small">Budget</span></a>
+            <a href="#budget" aria-controls="settings" role="tab" data-toggle="tab">$<span class="budgetvalue" id="budgetvalue">2000+</span><br /><span class="tab-font-small">Budget</span></a>
           </li>
         </ul>
 
