--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Flying Tomato Airlines</title>
 
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
+
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-datepicker.min.css" rel="stylesheet">
