--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
                                    CityU,Hong Kong,CS3382, airline,travel,book,explore,">
     <meta name="description" content="Explore and book your ideal trip with Flying Tomato Airlines.">
     <meta name="p:domain_verify" content="f5c282ee5d68b8b6184c680e6a163a7c"/>
+
+    <meta property="og:title" content="Flying Tomato Airlines">
+    <meta property="og:description" content="Explore and book your ideal trip with Flying Tomato Airlines.">
+    <meta property="og:image" content="http://flyingtomatoairlines.com/img/fb_post.png">
+    <meta property="og:url" content="http://flyingtomatoairlines.com">
+
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Flying Tomato Airlines</title>
 
