--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <meta property="og:image" content="http://flyingtomatoairlines.com/img/fb_post.png">
     <meta property="og:url" content="http://flyingtomatoairlines.com">
 
+    <meta name="twitter:title" content="Flying Tomato Airlines">
+    <meta name="twitter:description" content="Explore and book your ideal trip with Flying Tomato Airlines.">
+    <meta name="twitter:image" content="http://flyingtomatoairlines.com/img/fb_post.png">
+    <meta name="twitter:card" content="summary_large_image">
+
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Flying Tomato Airlines</title>
 
@@ -381,5 +386,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.3.2/bootstrap-slider.min.js"></script>
     <script src="js/flights.js"></script>
     <script src="js/main.js"></script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-87484919-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
