--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
     <meta property="og:title" content="Flying Tomato Airlines">
     <meta property="og:description" content="Explore and book your ideal trip with Flying Tomato Airlines.">
-    <meta property="og:image" content="http://flyingtomatoairlines.com/img/fb_post.png">
+    <meta property="og:image" content="http://flyingtomatoairlines.com/img/fb_post.jpg">
     <meta property="og:url" content="http://flyingtomatoairlines.com">
 
     <meta name="twitter:title" content="Flying Tomato Airlines">
     <meta name="twitter:description" content="Explore and book your ideal trip with Flying Tomato Airlines.">
-    <meta name="twitter:image" content="http://flyingtomatoairlines.com/img/fb_post.png">
+    <meta name="twitter:image" content="http://flyingtomatoairlines.com/img/fb_post.jpg">
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
